JavaScript disambiguation
Former-commit-id: 580b53450acd1a53d8a7901740f3bfa3f4fd7f84