@@ -228,12 +228,12 @@ public class MopacGraphfReader extends MopacSlaterReader {
       if (orbitalInfo != null) {
         line = orbitalInfo.get(iMo);
         String[] tokens = getTokens();
-        mo.put("energy", new Float(parseFloatStr(tokens[3])));
-        mo.put("occupancy", new Float(parseFloatStr(tokens[1])));
+        mo.put("energy", Float.valueOf(parseFloatStr(tokens[3])));
+        mo.put("occupancy", Float.valueOf(parseFloatStr(tokens[1])));
       } else if (readLine() != null) {
         getTokensFloat(line, values, 2);
-        mo.put("energy", new Float(values[0]));
-        mo.put("occupancy", new Float(values[1]));
+        mo.put("energy", Float.valueOf(values[0]));
+        mo.put("occupancy", Float.valueOf(values[1]));
       }
       mo.put("coefficients", list2[iMo]);
       if (isBeta)
