@@ -172,7 +172,7 @@ public class ShelxReader extends AtomSetCollectionReader {
     int ioff = tokens.length - 6;
     if (ioff == 2)
       atomSetCollection.setAtomSetCollectionAuxiliaryInfo("wavelength",
-          new Float(parseFloatStr(tokens[1])));
+          Float.valueOf(parseFloatStr(tokens[1])));
     for (int ipt = 0; ipt < 6; ipt++)
       setUnitCellItem(ipt, parseFloatStr(tokens[ipt + ioff]));
   }
