@@ -25,7 +25,7 @@ class Font {
       fontMap.put(TextAttribute.WEIGHT, TextAttribute.WEIGHT_BOLD);
     if (isItalic)
       fontMap.put(TextAttribute.POSTURE, TextAttribute.POSTURE_OBLIQUE);
-    fontMap.put(TextAttribute.SIZE, new Float(fontSize));
+    fontMap.put(TextAttribute.SIZE, Float.valueOf(fontSize));
     return new java.awt.Font(fontMap);
   }
 
